--- a/src/main/webapp/dictTypeView.html
+++ b/src/main/webapp/dictTypeView.html
@@ -323,6 +323,15 @@
 <script src="plugins/bs_pagination/js/cn.js"></script>
 
 <script>
+
+    // DataTable中文排序
+    jQuery.fn.dataTableExt.oSort['chinese-sort-asc'] = function (s1, s2) {
+        return s1.localeCompare(s2);
+    };
+    jQuery.fn.dataTableExt.oSort['chinese-sort-desc'] = function (s1, s2) {
+        return s2.localeCompare(s1);
+    };
+
     $(function () {
 
         // $.ajax({
@@ -360,12 +369,12 @@
         var dictTypes = $("#dictTypes");
         var table = $("#dictTypes").DataTable({
             "paging": false,
-            "serverSide": true,
-            "lengthChange": true,
+            "serverSide": false,
+            "lengthChange": false,
             "searching": false,
             "ordering": true,
             "info": false,
-            "autoWidth": false,
+            "autoWidth": true,
             "responsive": true,
             "ajax": {
                 url: "dictionaryType/getPage.action",
@@ -408,8 +417,8 @@
             "columns": [
                 {"data": null},
                 {"data": "id"},
-                {"data": "name"},
-                {"data": "description"},
+                {"data": "name", "sType": "chinese-sort"},
+                {"data": "description", "sType": "chinese-sort"},
                 {"data": null}
             ],
             "columnDefs": [
