--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <!-- 响应式支持:兼容多终端 -->
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Hello</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>　
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"/>
@@ -208,6 +209,8 @@
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Sparkline -->
 <script src="plugins/sparklines/sparkline.js"></script>
+<!-- Moment -->
+<script src="plugins/moment/moment.min.js"></script>
 <!-- Tempusdominus Bootstrap 4 -->
 <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
 <!-- overlayScrollbars -->
