--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,30 +2,30 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link href="plugins/bootstrap-3.4.1/dist/css/bootstrap.css" type="text/css" rel="stylesheet"/>
-    <!-- 需要加载的脚本-->
-    <!-- jQuery -->
-    <script src="plugins/jquery/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
-    <script SRC="plugins/bootstrap-3.4.1/dist/js/bootstrap.js"></script>
-
+    <!-- 响应式支持:兼容多终端 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <!-- Theme style -->
+    <link rel="stylesheet" href="dist/css/adminlte.min.css"/>
+    <!-- Bootstrap v3.4.1 -->
+    <link rel="stylesheet" href="dist/css/bootstrap.css"/>
 </head>
 <body>
-<div style="position: absolute; top: 0px; left: 0px; width: 60%;">
-    <img src="img/IMG_7114.JPG" style="width: 100%; height: 90%; position: relative; top: 50px;">
+<div style="position: absolute; top: 0; left: 0; width: 60%;">
+    <img src="dist/img/IMG_7114.JPG" style="width: 100%; height: 90%; position: relative; top: 50px;" alt="">
 </div>
 <div id="top" style="height: 50px; background-color: #3C3C3C; width: 100%;">
-    <div style="position: absolute; top: 5px; left: 0px; font-size: 30px; font-weight: 400; color: white; font-family: 'times new roman'">
-        CRM &nbsp;<span style="font-size: 12px;">&copy;2017&nbsp;动力节点</span></div>
+    <div class="ml-3" style="position: absolute; top: 5px; left: 0; font-size: 30px; font-weight: 400; color: white;">
+        客户关系管理系统<span style="font-size: 15px;"><strong>&copy; 2023-2024<a href="#">.io</a>.</strong></span>
+    </div>
 </div>
 
 <div style="position: absolute; top: 120px; right: 100px;width:450px;height:400px;border:1px solid #D5D5D5">
-    <div style="position: absolute; top: 0px; right: 60px;">
+    <div style="position: absolute; top: 0; right: 60px;">
         <div class="page-header">
             <h1>登录</h1>
         </div>
-        <form  class="form-horizontal" role="form">
+        <form class="form-horizontal" role="form">
             <div class="form-group form-group-lg">
                 <div style="width: 350px;">
                     <input class="form-control" id="loginAct" type="text" placeholder="用户名">
@@ -33,12 +33,12 @@
                 <div style="width: 350px; position: relative;top: 20px;">
                     <input class="form-control" id="loginPwd" type="password" placeholder="密码">
                 </div>
-                <div  class="checkbox" style="position: relative;top: 30px; left: 10px;">
+                <div class="checkbox" style="position: relative;top: 30px; left: 10px;">
                     <label>
-                        <input id="rememberMe" type="checkbox" value="1"> 十天内免登录
+                        <input id="rememberMe" type="checkbox" value="1"> 七天免登录
                     </label>
                 </div>
-                <button type="button" id="btnLogin" class="btn btn-primary btn-lg btn-block"
+                <button type="button" id="loginBtn" class="btn btn-primary btn-lg btn-block"
                         style="width: 350px; position: relative;top: 45px;">登录
                 </button>
             </div>
@@ -48,7 +48,35 @@
 </body>
 </html>
 
+<!-- jQuery -->
+<script src="plugins/jquery/jquery.min.js"></script>
+<!-- jQuery UI 1.11.4 -->
+<script src="plugins/jquery-ui/jquery-ui.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <script>
-
+    $(function () {
+        $("#loginBtn").click(function () {
+            $.ajax({
+                url: "user/login.action",
+                type: "post",
+                data: {
+                    "loginAct": $("#loginAct").val(),
+                    "loginPwd": $("#loginPwd").val()
+                },
+                dataType: "json",
+                success: function (data, textStatus, jqXHR) {
+                    if (data.result === "success") {
+                        window.location = "/index.html";
+                    } else {
+                        alert(data.msg);
+                    }
+                },
+                error: function (XHR, textStatus, errorThrown) {
+                    alert(textStatus);
+                }
+            });
+        });
+    });
 </script>
