--- a/src/main/webapp/activityView.html
+++ b/src/main/webapp/activityView.html
@@ -512,50 +512,108 @@
         return s2.localeCompare(s1);
     };
 
+    //todo 初始化查询条件框
+    function initQuery() {
+        return new Promise((resolve, reject) => {
+            $.ajax({
+                url: "user/getAll.action",
+                type: "get",
+                dataType: "json",
+                success: function (data, textStatus, jqXHR) {
+                    if (data.result === "success") {
+                        // 一个标签只能有一个归属，不能同时归属于三个组件；
+                        var owner = $("#owner-query");
+                        owner.empty();
+                        owner.append("<option value='-1'>请选择</option>");
+                        var createBy = $("#createBy-query");
+                        createBy.empty();
+                        createBy.append("<option value='-1'>请选择</option>");
+                        var editBy = $("#editBy-query");
+                        editBy.empty();
+                        editBy.append("<option value='-1'>请选择</option>");
+                        $(data.data).each(function (i, e) {
+                            owner.append("<option value='" + e.id + "'>" + e.name + "</option>");
+                            createBy.append("<option value='" + e.id + "'>" + e.name + "</option>");
+                            editBy.append("<option value='" + e.id + "'>" + e.name + "</option>");
+                        })
+                        //todo DateTimePicker
+                        $("input[date]").datetimepicker({
+                            // language: "zh-CN",
+                            format: "yyyy-mm-dd",
+                            minView: "month",
+                            initialDate: new Date(),
+                            autoclose: true,
+                            clearBtn: true,
+                            todayBtn: true,
+                            pickerPosition: "bottom-right"
+                        }).prop("readonly", true).css("cursor", "default");
+
+                        resolve();
+                    } else {
+                        alert(data.msg);
+                    }
+                },
+                error: function (XHR, textStatus, errorThrown) {
+                    alert(textStatus);
+                    reject("初始化查询条件框失败");
+                }
+            });
+        });
+    }
+
+    //todo 初始化模态框(由添加/修改按钮触发)
+    function initModal(callback) {
+        return new Promise((resolve, reject) => {
+            $.ajax({
+                url: "user/getAll.action",
+                type: "get",
+                dataType: "json",
+                success: function (data, textStatus, jqXHR) {
+                    if (data.result === "success") {
+                        var ownerModal = $("#owner-modal");
+                        ownerModal.empty();
+                        ownerModal.append("<option value='-1'>请选择</option>");
+                        $(data.data).each(function (i, e) {
+                            var option = $("<option value='" + e.id + "'>" + e.name + "</option>");
+                            ownerModal.append(option);
+                        })
+                        callback();
+                        resolve();
+                    } else {
+                        alert(data.msg);
+                    }
+                },
+                error: function (XHR, textStatus, errorThrown) {
+                    alert(textStatus);
+                    reject("初始化模态框失败");
+                }
+            });
+        });
+    }
+
     $(function () {
 
-        //todo 初始化查询条件框
-        $.ajax({
-            url: "user/getAll.action",
-            type: "get",
-            dataType: "json",
-            success: function (data, textStatus, jqXHR) {
-                if (data.result === "success") {
-                    // 一个标签只能有一个归属，不能同时归属于三个组件；
-                    var owner = $("#owner-query");
-                    owner.empty();
-                    owner.append("<option value='-1'>请选择</option>");
-                    var createBy = $("#createBy-query");
-                    createBy.empty();
-                    createBy.append("<option value='-1'>请选择</option>");
-                    var editBy = $("#editBy-query");
-                    editBy.empty();
-                    editBy.append("<option value='-1'>请选择</option>");
-                    $(data.data).each(function (i, e) {
-                        owner.append("<option value='" + e.id + "'>" + e.name + "</option>");
-                        createBy.append("<option value='" + e.id + "'>" + e.name + "</option>");
-                        editBy.append("<option value='" + e.id + "'>" + e.name + "</option>");
-                    })
-                } else {
-                    alert(data.msg);
-                }
-            },
-            error: function (XHR, textStatus, errorThrown) {
-                alert(textStatus);
-            }
-        });
-
-        // DateTimePicker
-        $("input[date]").datetimepicker({
-            // language: "zh-CN",
-            format: "yyyy-mm-dd",
-            minView: "month",
-            initialDate: new Date(),
-            autoclose: true,
-            clearBtn: true,
-            todayBtn: true,
-            pickerPosition: "bottom-right"
-        }).prop("readonly", true).css("cursor", "default");
+        initQuery()
+            .then(() => {
+                //todo 条件查询按钮
+                $("#queryBtn").click(function () {
+                    table.ajax.reload();
+                });
+                //todo 清除条件按钮
+                $("#clearCondBtn").click(function () {
+                    $("#name-query").val("");
+                    $("#cost-query").val("");
+                    $("#owner-query").val("-1");
+                    $("#createBy-query").val("-1");
+                    $("#editBy-query").val("-1");
+                    $("#startDate-query").val("");
+                    $("#endDate-query").val("");
+                    table.ajax.reload();
+                });
+            })
+            .catch(reason => {
+                alert(reason);
+            });
 
         //todo 初始化表格
         var activities = $("#activities");
@@ -667,49 +725,6 @@
             "order": [[1, 'asc']]
         });
 
-        //todo 条件查询按钮
-        $("#queryBtn").click(function () {
-            table.ajax.reload();
-        });
-
-        //todo 清除条件按钮
-        $("#clearCondBtn").click(function () {
-            $("#name-query").val("");
-            $("#cost-query").val("");
-            $("#owner-query").val("-1");
-            $("#createBy-query").val("-1");
-            $("#editBy-query").val("-1");
-            $("#startDate-query").val("");
-            $("#endDate-query").val("");
-            table.ajax.reload();
-        });
-
-        //todo 初始化模态框(由添加/修改按钮触发)
-        function initModal(callback) {
-            $.ajax({
-                url: "user/getAll.action",
-                type: "get",
-                dataType: "json",
-                success: function (data, textStatus, jqXHR) {
-                    if (data.result === "success") {
-                        var ownerModal = $("#owner-modal");
-                        ownerModal.empty();
-                        ownerModal.append("<option value='-1'>请选择</option>");
-                        $(data.data).each(function (i, e) {
-                            var option = $("<option value='" + e.id + "'>" + e.name + "</option>");
-                            ownerModal.append(option);
-                        })
-                        callback();
-                    } else {
-                        alert(data.msg);
-                    }
-                },
-                error: function (XHR, textStatus, errorThrown) {
-                    alert(textStatus);
-                }
-            });
-        }
-
         //todo 删除按钮
         $("#delBtn").click(function () {
             var ids = getIds();
@@ -741,6 +756,8 @@
             }
         });
 
+        var saveBtn = $("#saveBtn");
+
         //todo 添加按钮
         $("#addBtn").click(function () {
             $("activityModal").data("type", "add");
@@ -751,35 +768,38 @@
                 $("#cost-modal").val("");
                 $("input[modal]").datetimepicker("setDate", new Date());
                 $("#description-modal").val("");
-            });
-        });
-
-        //todo 保存按钮
-        $("#saveBtn").click(function () {
-            $.ajax({
-                url: "activity/add.action",
-                type: "post",
-                contentType: "application/json; charset=UTF-8",
-                data: JSON.stringify({
-                    "name": $("#name-modal").val(),
-                    "cost": $("#cost-modal").val(),
-                    "ownerId": $("#owner-modal").val(),
-                    "startDate": $("#startDate-modal").val(),
-                    "endDate": $("#endDate-modal").val(),
-                    "description": $("#description-modal").val()
-                }),
-                dataType: "json",
-                success: function (data, textStatus, jqXHR) {
-                    if (data.result === "success") {
-                        $("#activityModal").modal("hide");
-                        table.ajax.reload();
-                    } else {
-                        alert(data.msg);
-                    }
-                },
-                error: function (XHR, textStatus, errorThrown) {
-                    alert(textStatus);
-                }
+            }).then(() => {
+                //todo 添加模态框保存按钮
+                saveBtn.off("click");
+                saveBtn.click(() => {
+                    $.ajax({
+                        url: "activity/add.action",
+                        type: "post",
+                        contentType: "application/json; charset=UTF-8",
+                        data: JSON.stringify({
+                            "name": $("#name-modal").val(),
+                            "cost": $("#cost-modal").val(),
+                            "ownerId": $("#owner-modal").val(),
+                            "startDate": $("#startDate-modal").val(),
+                            "endDate": $("#endDate-modal").val(),
+                            "description": $("#description-modal").val()
+                        }),
+                        dataType: "json",
+                        success: function (data, textStatus, jqXHR) {
+                            if (data.result === "success") {
+                                $("#activityModal").modal("hide");
+                                table.ajax.reload();
+                            } else {
+                                alert(data.msg);
+                            }
+                        },
+                        error: function (XHR, textStatus, errorThrown) {
+                            alert(textStatus);
+                        }
+                    });
+                });
+            }).catch(reason => {
+                alert(reason)
             });
         });
 
