--- a/src/main/webapp/dictValueView.html
+++ b/src/main/webapp/dictValueView.html
@@ -343,6 +343,35 @@
         return s2.localeCompare(s1);
     };
 
+    //todo 初始化模态框(由添加/修改按钮触发)
+    function initModal(data, callback) {
+        return new Promise((resolve, reject) => {
+            $.ajax({
+                url: "dictionaryType/getAll.action",
+                type: "get",
+                dataType: "json",
+                success: function (data, textStatus, jqXHR) {
+                    if (data.result === "success") {
+                        $("#types").empty();
+                        $(data.data).each(function (i, e) {
+                            // 需要把值用双引号包起来
+                            var option = $("<option value='" + e.id + "'>" + e.name + "</option>");
+                            $("#types").append(option);
+                        })
+                        callback();
+                        resolve();
+                    } else {
+                        alert(data.msg);
+                    }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    alert(textStatus);
+                    reject("初始化模态框失败");
+                }
+            });
+        });
+    }
+
     $(function () {
 
         //todo 初始化表格
@@ -441,32 +470,6 @@
             "order": [[5, 'asc'], [4, 'asc']]
         });
 
-        //todo 初始化模态框(由添加/修改按钮触发)
-        function initModal(data, callback) {
-            $.ajax({
-                url: "dictionaryType/getAll.action",
-                type: "get",
-                dataType: "json",
-                success: function (data, textStatus, jqXHR) {
-                    if (data.result === "success") {
-                        $("#types").empty();
-                        $(data.data).each(function (i, e) {
-                            // 需要把值用双引号包起来
-                            var option = $("<option value='" + e.id + "'>" + e.name + "</option>");
-                            $("#types").append(option);
-                        })
-                        callback();
-                        resolve();
-                    } else {
-                        alert(data.msg);
-                    }
-                },
-                error: function (XMLHttpRequest, textStatus, errorThrown) {
-                    alert(textStatus);
-                }
-            });
-        }
-
         //todo 删除按钮
         $("#delBtn").click(function () {
             var ids = getIds();
@@ -500,6 +503,8 @@
             }
         });
 
+        var saveBtn = $("#saveBtn");
+
         //todo 添加按钮
         $("#addBtn").click(function () {
             $("#dictValueModal").data("type", "add");
@@ -510,63 +515,39 @@
                 $("#value").val("");
                 $("#text").val("");
                 $("#orderNo").val("");
-            })
-        });
-
-        //todo 保存按钮
-        $("#saveBtn").click(function () {
-            if ($("#dictValueModal").data("type") === "add") {
-                $.ajax({
-                        url: "dictionaryValue/add.action",
-                        type: "post",
-                        contentType: "application/json; charset=UTF-8",
-                        data: JSON.stringify({
-                            "value": $("#value").val(),
-                            "text": $("#text").val(),
-                            "orderNo": $("#orderNo").val(),
-                            "typeId": $("#types").val()
-                        }),
-                        dataType: "json",
-                        success: function (data, textStatus, jqXHR) {
-                            if (data.result === "success") {
-                                $("#dictValueModal").modal('hide');
-                                table.ajax.reload();
-                            } else {
-                                // 可以设置吐司弹窗
-                                alert(data.msg);
+            }).then(() => {
+                //todo 添加模态框保存按钮
+                saveBtn.off("click");
+                saveBtn.click(() => {
+                    $.ajax({
+                            url: "dictionaryValue/add.action",
+                            type: "post",
+                            contentType: "application/json; charset=UTF-8",
+                            data: JSON.stringify({
+                                "value": $("#value").val(),
+                                "text": $("#text").val(),
+                                "orderNo": $("#orderNo").val(),
+                                "typeId": $("#types").val()
+                            }),
+                            dataType: "json",
+                            success: function (data, textStatus, jqXHR) {
+                                if (data.result === "success") {
+                                    $("#dictValueModal").modal('hide');
+                                    table.ajax.reload();
+                                } else {
+                                    // 可以设置吐司弹窗
+                                    alert(data.msg);
+                                }
+                            },
+                            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                                alert(textStatus);
                             }
-                        },
-                        error: function (XMLHttpRequest, textStatus, errorThrown) {
-                            alert(textStatus);
                         }
-                    }
-                )
-            } else if ($("#dictValueModal").data("type") === "edit") {
-                $.ajax({
-                    url: "dictionaryValue/edit.action",
-                    type: "post",
-                    contentType: "application/json; charset=UTF-8",
-                    data: JSON.stringify({
-                        "id": $("#id").val(),
-                        "value": $("#value").val(),
-                        "text": $("#text").val(),
-                        "orderNo": $("#orderNo").val(),
-                        "typeId": $("#types").val()
-                    }),
-                    dataType: "json",
-                    success: function (data, textStatus, jqXHR) {
-                        if (data.result === "success") {
-                            $("#dictValueModal").modal('hide');
-                            table.ajax.reload();
-                        } else {
-                            alert(data.msg);
-                        }
-                    },
-                    error: function (XMLHttpRequest, textStatus, errorThrown) {
-                        alert(textStatus);
-                    }
-                })
-            }
+                    );
+                });
+            }).catch(reason => {
+                alert(reason);
+            })
         });
 
         // 表格内的动态组件绑定的(click)事件在表格刷新后失效，故改为利用 on监听其父组件(表格)；
@@ -589,6 +570,37 @@
                             $("#orderNo").val(data.data.orderNo);
                             // 对于<select>只能赋其子组件<option>中的 value属性值；
                             $("#types").val(data.data.dictType.id);
+                        }).then(() => {
+                            //todo 编辑模态框保存按钮
+                            saveBtn.off("click");
+                            saveBtn.click(() => {
+                                $.ajax({
+                                    url: "dictionaryValue/edit.action",
+                                    type: "post",
+                                    contentType: "application/json; charset=UTF-8",
+                                    data: JSON.stringify({
+                                        "id": $("#id").val(),
+                                        "value": $("#value").val(),
+                                        "text": $("#text").val(),
+                                        "orderNo": $("#orderNo").val(),
+                                        "typeId": $("#types").val()
+                                    }),
+                                    dataType: "json",
+                                    success: function (data, textStatus, jqXHR) {
+                                        if (data.result === "success") {
+                                            $("#dictValueModal").modal('hide');
+                                            table.ajax.reload();
+                                        } else {
+                                            alert(data.msg);
+                                        }
+                                    },
+                                    error: function (XMLHttpRequest, textStatus, errorThrown) {
+                                        alert(textStatus);
+                                    }
+                                })
+                            });
+                        }).catch(reason => {
+                            alert(reason);
                         })
                     } else {
                         alert(data.msg);
